# terrain_extractor

traversable_terrain_extractor/: CMakeLists.txt  README.md  package.xml
traversable_terrain_extractor/config/: terrain_params.yaml
traversable_terrain_extractor/include/traversable_terrain_extractor/: elevation_grid.hpp  feature_computer.hpp  ground_segmentation.hpp  map_accumulator.hpp  normal_estimator.hpp  occupancy_grid_projector.hpp  preprocessing.hpp  terrain_classifier.hpp  terrain_extractor_node.hpp  types.hpp
traversable_terrain_extractor/launch/: terrain_extractor.launch.py
traversable_terrain_extractor/src/: elevation_grid.cpp  feature_computer.cpp  ground_segmentation.cpp  main.cpp  map_accumulator.cpp  normal_estimator.cpp  occupancy_grid_projector.cpp  preprocessing.cpp  terrain_classifier.cpp  terrain_extractor_node.cpp
traversable_terrain_extractor/srv/: SaveTraversableMap.srv
